# ComfyUI_FMJ

./: README.md  __init__.py  creaprompt.py  fmjcreaprompt.py  fmjkontex.py  fmjkontext.py  pyproject.toml
Workflow/: CreaPrompFMJ.json
csv/: 3_9Planet_Philippe_Joye.csv  collection.txt
csvkontex/: 0_0KT_Object_Modification.csv  0_2KT_Scene_Transformation.csv  0_3KT_Character_Consistency.csv  0_4KT_Text_Editing.csv  0_5KT_Key_Verbs.csv
csvkontext/: 0_1KT_Style_Transfer.csv  0_6KT_Emotional_Poses.csv  0_7KT_Key_Lora.csv  0_8KT_Photo.csv  1_2KT_Transform_Woman_v2.csv  1_3KT_Transform_Man_v2.csv  1_4it's_me_1.csv  1_4it's_me_2.csv  collection.txt
