[project]
name = "comfyui_FMJ"
description = "Generate random prompts easily for FMJ."
version = "1.5.2"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/bulldog68/ComfyUI_FMJ"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bulldog63"
DisplayName = "ComfyUI_FMJ"
Icon = ""
